--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,13 @@
 
 
 body,#root{
-  width:98vw;
-  height: max-content;
+  width:100vw;
+  height: 100vh;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #222;
+  background: linear-gradient(to bottom, #78c5f5, #004aad);
 }
