--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body,#root{
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-repeat: no-repeat;
   background-image: url(./assets/Images/bg-image3.jpg);
   background-size: cover;
   background-position: center;
