--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body,#root{
   flex-direction: column;
   align-items: center;
   background-repeat: no-repeat;
-  background-image: url(./assets/Images/bg-image3.jpg);
+  background-image: url("./assets/Images/bg-image3.jpg");
   background-size: cover;
   background-position: center;
 }
